--- a/roles/install_update_dns_script/files/update_dns.yml
+++ b/roles/install_update_dns_script/files/update_dns.yml
@@ -1,6 +1,12 @@
 - hosts: 127.0.0.1
   connection: local
   tasks:
+    - name: get_ip
+      uri:
+        url: http://169.254.169.254/latest/meta-data/public-ipv4
+        return_content: yes
+      register: global_ip
+
     - name: set A record
       route53:
         command: create
@@ -8,5 +14,5 @@
         record: github-jenkins.kikusu.net
         type: A
         ttl: 300
-        value: "{{ global_ip }}"
+        value: "{{ global_ip.content }}"
         overwrite: yes
