--- a/roles/install_update_dns_script/tasks/main.yml
+++ b/roles/install_update_dns_script/tasks/main.yml
@@ -12,4 +12,4 @@
     name: update dns
     special_time: reboot
     user: root
-    job: /usr/local/bin/ansible-playbook /root/update_dns.yml -e global_ip=$(curl http://169.254.169.254/latest/meta-data/public-ipv4) -vvv > /var/log/update_dns.log
+    job: /usr/local/bin/ansible-playbook /root/update_dns.yml -v > /var/log/update_dns.log
